# mh-case

./: .gitignore  LICENSE  README.md  biomechanical_model_info.txt  main.py  pyproject.toml  requirements.txt
docs/: case_instructions.md  event_detector.md  rsi_analyser.md  rsi_analysis_pipeline.md
results/: rsi_results_20251007_000207.csv
src/: event_detector.py  plots.py  reactive_jump_analysis.ipynb  rsi_analyser.py  rsi_analysis_pipeline.py
